# php-build-system

./: .cmakelintrc  .codespellrc  .editorconfig  .gersemirc  .gitignore  .gitmodules  .typos.toml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Flags.cmake.patch  README.md  SECURITY.md  a.out  cmake-format.json  cmake.patch  cmake_2.patch  init  init.sh  php_config.diff  script.sh  src.c  update
cmake/: CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  conanfile.txt  vcpkg.json
cmake/TSRM/: CMakeLists.txt
cmake/Zend/: CMakeLists.txt  zend_config.cmake.h.in
cmake/Zend/cmake/: CheckAlignment.cmake  CheckAsmGoto.cmake  CheckCpuidCount.cmake  CheckDlsym.cmake  CheckFloatPrecision.cmake  CheckGlobalRegisterVariables.cmake  CheckMMAlignment.cmake  CheckMaxExecutionTimers.cmake  CheckPreserveNone.cmake  CheckSignals.cmake  CheckStackDirection.cmake  CheckStackLimit.cmake  CheckStrerrorR.cmake  Fibers.cmake  GenerateGrammar.cmake  GlobalRegisterVariables.cmake  MaxExecutionTimers.cmake  Signals.cmake  Version.cmake  zend_config.h.in
cmake/cmake/: Bootstrap.cmake  BuildTypes.cmake  CMakeDefaults.cmake  CPack.cmake  CompilerOptions.cmake  Configuration.cmake  ConfigureChecks.cmake  Coverage.cmake  CreateBuildDefinitions.cmake  CreateFiles.cmake  Extensions.cmake  Findre2c.cmake  Flags.cmake  PHPConfig.cmake.in  PHPConfiguration.cmake  PHPOptions.cmake  Platform.cmake  Rebuild.cmake  Requirements.cmake  Summary.cmake  Testing.cmake  ThreadSafety.cmake  Version.cmake  cmake-format.json  extension.cmake  fibers.cmake  fileinfo_test.c  includeExtensions.cmake  internalFunctions.cmake  posix_ttyname_test.c  test_standard_getifaddrs.c  zend_test.c
cmake/cmake/Zend/: PatchZendLanguageParserFiles.cmake
cmake/cmake/autotools/: PHPConfig.cmake
cmake/cmake/checks/: CheckAVX512.cmake  CheckAlignof.cmake  CheckAlloca.cmake  CheckCopyFileRange.cmake  CheckFlushIo.cmake  CheckFnmatch.cmake  CheckFopencookie.cmake  CheckGetaddrinfo.cmake  CheckGethostbynameR.cmake  CheckGetifaddrs.cmake  CheckIPv6.cmake  CheckInline.cmake  CheckPollMechanisms.cmake  CheckReentrantFunctions.cmake  CheckSegmentsAlignment.cmake  CheckStrerrorR.cmake  CheckWrite.cmake
cmake/cmake/gersemi/: .gersemirc  .gersemirc.yaml
cmake/cmake/installation/: Install.cmake  PHPConfig.cmake.in
cmake/cmake/modules/: CheckDTrace.cmake  CheckFibers.cmake  CheckFloatPrecision.cmake  CheckFlushIo.cmake  CheckGccGlobalRegisterVars.cmake  CheckIPv6.cmake  CheckMMAlignment.cmake  CheckStackLimit.cmake  CheckZendSignals.cmake  CreateBuildDefinitions.cmake  CreateInternalFunctions.cmake  DefineCMakeDefaults.cmake  FindACL.cmake  FindAPPARMOR.cmake  FindARGON.cmake  FindASPELL.cmake  FindATOMIC.cmake  FindATOMICS.cmake  FindAVIF.cmake  FindApache.cmake  FindAppArmor.cmake  FindArgon2.cmake  FindAspell.cmake  FindAtomic.cmake  FindBISON.cmake  FindBZip2.cmake  FindBerkeleyDB.cmake  FindCAPSTONE.cmake  FindCClient.cmake  FindCURL.cmake  FindCapstone.cmake  FindCcache.cmake  FindCclient.cmake  FindCdb.cmake  FindCoverage.cmake  FindCoverageGcovr.cmake  FindCoverageLcov.cmake  FindCrypt.cmake  FindDTrace.cmake  FindDbm.cmake  (+137 more)
cmake/cmake/platform/: Darwin.cmake  SunOS.cmake  Windows.cmake
cmake/cmake/presets/: all-disabled.json  all-enabled.json  conan.json  windows.json
cmake/cmake/scripts/: GenerateCredits.cmake  GenerateGrammar.cmake  GenerateLexersParsers.cmake  UpdateCMake.cmake
cmake/cmake/tests/: CMakeLists.txt
cmake/cmake/toolchains/: arm.cmake  mingw64.cmake  template.cmake
cmake/ext/: CMakeLists.txt
cmake/ext/bcmath/: CMakeLists.txt  config.cmake.h.in
cmake/ext/bz2/: CMakeLists.txt  config.cmake.h.in
cmake/ext/calendar/: CMakeLists.txt  config.cmake.h.in
cmake/ext/com_dotnet/: CMakeLists.txt  config.cmake.h.in
cmake/ext/ctype/: CMakeLists.txt  config.cmake.h.in
cmake/ext/curl/: CMakeLists.txt  config.cmake.h.in
cmake/ext/date/: CMakeLists.txt  config.cmake.h.in
cmake/ext/dba/: CMakeLists.txt  config.cmake.h.in
cmake/ext/dl_test/: CMakeLists.txt  config.cmake.h.in
cmake/ext/dom/: CMakeLists.txt  config.cmake.h.in
cmake/ext/enchant/: CMakeLists.txt  config.cmake.h.in
cmake/ext/exif/: CMakeLists.txt  config.cmake.h.in
cmake/ext/ffi/: CMakeLists.txt  config.cmake.h.in
cmake/ext/fileinfo/: CMakeLists.txt  config.cmake.h.in
cmake/ext/filter/: CMakeLists.txt  config.cmake.h.in
cmake/ext/ftp/: CMakeLists.txt  config.cmake.h.in
cmake/ext/gd/: CMakeLists.txt  config.cmake.h.in
cmake/ext/gettext/: CMakeLists.txt  config.cmake.h.in
cmake/ext/gmp/: CMakeLists.txt  config.cmake.h.in
cmake/ext/hash/: CMakeLists.txt  config.cmake.h.in
cmake/ext/iconv/: CMakeLists.txt  config.cmake.h.in
cmake/ext/imap/: CMakeLists.txt  config.cmake.h.in
cmake/ext/intl/: CMakeLists.txt  config.cmake.h.in
cmake/ext/json/: CMakeLists.txt  config.cmake.h.in
cmake/ext/ldap/: CMakeLists.txt  config.cmake.h.in
cmake/ext/lexbor/: CMakeLists.txt
cmake/ext/libxml/: CMakeLists.txt  config.cmake.h.in
cmake/ext/mbstring/: CMakeLists.txt  config.cmake.h.in
cmake/ext/mysqli/: CMakeLists.txt  config.cmake.h.in
cmake/ext/mysqlnd/: CMakeLists.txt  config.cmake.h.in
cmake/ext/oci8/: CMakeLists.txt  config.cmake.h.in
cmake/ext/odbc/: CMakeLists.txt  config.cmake.h.in
cmake/ext/opcache/: CMakeLists.txt  config.cmake.h.in
cmake/ext/openssl/: CMakeLists.txt  config.cmake.h.in
cmake/ext/pcntl/: CMakeLists.txt  config.cmake.h.in
cmake/ext/pcre/: CMakeLists.txt  config.cmake.h.in
cmake/ext/pdo/: CMakeLists.txt  config.cmake.h.in
cmake/ext/pdo_dblib/: CMakeLists.txt  config.cmake.h.in
cmake/ext/pdo_firebird/: CMakeLists.txt  config.cmake.h.in
cmake/ext/pdo_mysql/: CMakeLists.txt  config.cmake.h.in
cmake/ext/pdo_oci/: CMakeLists.txt  config.cmake.h.in
cmake/main/: CMakeLists.txt  config.w32.cmake.h.in  php_config.cmake.h.in  php_config.h.in  php_config_common.cmake.h.in  php_version.h.in
cmake/pear/: CMakeLists.txt  InstallPear.cmake
cmake/sapi/: CMakeLists.txt
cmake/scripts/: CMakeLists.txt  php.pc.in
cmake/tests/: CMakeLists.txt
cmake/win32/: CMakeLists.txt  wsyslog.h
(+871 files in other folders)
